<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">
    <EditText
        android:id="@+id/editTextRegistrationLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/editTextRegistrationPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:inputType="numberPassword"

        />
    <EditText
        android:id="@+id/editTextRegistration1stName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/editTextRegistration2ndName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistration1stName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/surname"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/editTextRegistration3rdName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistration2ndName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/_3rd_name_if_exist"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistration3rdName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/registration"
        />


</androidx.constraintlayout.widget.ConstraintLayout>